--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     </head>
     <body>
         <div id="contacts"></div>
+        	<header>
+        		<div id="filter"><label>Show me:</label></div>
+        	</header>
+        </div>
         <script id="contactTemplate" type="text/template">
             <img src="<%= photo %>" alt="<%= name %>" />
             <h1><%= name %><span><%= type %></span></h1>
