--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         <link rel="stylesheet" href="css/screen.css" />
     </head>
     <body>
-        <div id="contacts"></div>
-        	<header>
-        		<div id="filter"><label>Show me:</label></div>
-        	</header>
+        <div id="contacts">
+            <header>
+                <div id="filter"><label>Show me:</label></div>
+            </header>
         </div>
         <script id="contactTemplate" type="text/template">
             <img src="<%= photo %>" alt="<%= name %>" />
